DELETE /publications/:id done
